--- a/doc/Proj1_eda.Rmd
+++ b/doc/Proj1_eda.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "A data story on the history of philosophy"
-subtitle: "Key themes in the schools of philosophies and its similarity to one another"
+subtitle: "Key themes in the schools of philosophy and their similarity to one another"
 author: "Marcus Loke"
 date: "Spring 2022"
 output:
@@ -40,17 +40,17 @@ What is philosophy? According to Britannica, philosophy is the rational, abstrac
 
 Philosophy is a field that has always eluded me. Not because of the lack of interest in the subject, but more of the intangibleness of its contents -- we are dealing with things that are, as far as our personal experiences are concerned, entirely abstract and non-tangible. Furthermore, philosophy often involves claims about experience itself rather than the content of experience. That is a mode of thinking that most people are entirely unfamiliar with, and is a mode of thinking that can be difficult to grasp and comprehend. 
 
-So how can we better understand philosophy? Can we break down the different schools of philosophies into nice bite-sized quotable quotes/phrases/words? Are there school of thoughts that are more similar to each other? Conventionally, studying philosophy is to see the connection between ideas, and to explicate that connection in a reasoned and logical way. If that is the case, what's stopping us from using modern data science techniques to explore the connection of ideas in philosophical texts and its similarity (in themes) between the other school of thoughts? For layman folks like me who did not study philosophy, **_this project helps us to peer into the world of philosophy as it seeks to uncover key themes in the different schools of philosophy and to see which schools of philosophy are more similar to each other._**
+So how can we better understand philosophy? Can we break down the different schools of philosophy into nice bite-sized quotable quotes/phrases/words? Are there schools of thought that are more similar to each other? Conventionally, studying philosophy is to see the connection between ideas, and to explicate that connection in a reasoned and logical way. If that is the case, what's stopping us from using modern data science techniques to explore the connection of ideas in philosophical texts and its similarity (in themes) between the other school of thoughts? For layman folks like me who did not study philosophy, **_this project helps us to peer into the world of philosophy as it seeks to uncover key themes in the different schools of philosophy and to see which schools of philosophy are more similar to each other._**
 
 ## About the data
 
-The data for this project was taken from the Philosophy Data Project ([Alizadeh, 2021][Alizadeh, 2021]). The data has 360,808 rows and 11 columns and a snippet of the data is shown below. For my analysis, I would mostly be analyzing the texts in the column. `sentence_lowered`.
+The data for this project was taken from the Philosophy Data Project ([Alizadeh, 2021][Alizadeh, 2021]). The data has 360,808 rows and 11 columns and a snippet of the data is shown below. For my analysis, I would mostly be analyzing the texts in the column, `sentence_lowered`.
 
 ```{r, echo=FALSE}
 glimpse(dat)
 ```
 
-There are 13 schools of philosophies/thoughts in the data that I will focus in the analysis.
+There are 13 schools of philosophy/thought in the data that I will focus on in this analysis.
 
 ```{r, echo=FALSE}
 unique(dat$school)
@@ -76,7 +76,7 @@ p1 = dat %>%
 p1
 ```
 
-Finally, the average dates of when the various schools published their works are listed below (dates are important because they would have had influences on the philosophical themes during that era). The schools of `plato` and `aristotle` originated circa 300 BC, which makes sense because that was the era where Plato and Aristotle lived in (the Classical Period in Ancient Greece). On the other hand, the school of `stoicism` originated circa AD 160 -- without looking into the data, I am guessing that this might borrow themes of the early Christian faith because of its proximity (in time and location) to the events of Christ (we will delve into the themes in the next section). The rest of the schools originated from the 1700s and beyond, which would likely exhibit more postmodern thinking.
+Finally, the average dates of when the various schools published their works are listed below (dates are important because they would have had influences on the philosophical themes during that era). The schools of `plato` and `aristotle` originated circa 300 BC, which makes sense because that was the era where Plato and Aristotle lived in (the Classical Period in Ancient Greece). On the other hand, the school of `stoicism` originated circa AD 160 -- without looking into the data, I am guessing that this school might borrow themes of the early Christian faith because of its proximity (in time and location) to the events of Christ (we will delve into the themes in the next section). The rest of the schools originated from the 1700s and beyond, which would likely exhibit more postmodern thinking.
 
 ```{r, echo=FALSE}
 sch_date = dat %>%
@@ -89,7 +89,7 @@ sch_date
 
 ## What are the key themes in each philosophical school?
 
-I approached this question by treating each text as a "bag of words" where the words are examined independent of their position in text. I employed text mining techniques such as tokenization from `tidytext::unnest_tokens()` on the sentences in the data. This essentially "chops" the sentences into words, i.e., the text is decomposed into tokens. By default, each token is a word. But words alone do not convey much context, therefore, I used the ngram tokens to decompose the texts into word pairs, which would give better contexts for the analyzed texts.
+I approached this question by treating each text as a "bag of words" where the words are examined independent of their position in text. I employed text mining techniques such as tokenization from `tidytext::unnest_tokens()` on the sentences in the data. This essentially "chops" the sentences into words, i.e., the text is decomposed into tokens. By default, each token is a word. But words alone do not convey much context, therefore, I used the ngram tokens to decompose the texts into word pairs, which would give better context for the analyzed texts.
 
 After getting the counts of the biwords/word pairs, I visualized the connection of the words with a network diagram using `igraph::graph_from_data_frame()` and `ggraph::ggraph()`. The thicker the lines between words, the greater the term frequency. For each of the 13 schools, I will attempt to explain some of the salient word-pairs as highlighted by the network diagrams below.
 
@@ -129,7 +129,7 @@ for (school in schools){
 
 ### Plato (circa 350 BC)
 
-*Plato* was an athlete and he said a lot about physical fitness, so much so he placed them into a bigger framework that encompassed state policies, military strategies and educational programs. This could explains why "physical training" occurred often in his works.
+*Plato* was an athlete and he said a lot about physical fitness, so much so he placed them into a bigger framework that encompassed state policies, military strategies and educational programs. This could explains why *"physical training"* occurred often in his works.
 
 ```{r, echo=FALSE}
 p_plato = biword_counts[[1]] %>%
@@ -147,7 +147,7 @@ p_plato
 
 ### Aristotle (circa 320 BC)
 
-As a logician, *Aristotle* was most notable for his theory of inference. The "middle term" that showed up in the network diagram refers to his theory of inferences (aka syllogism), where it is a term that appears as a subject/predicate/proposition in both premises but not in the conclusion (complicated right?). To simplify, let me give an example:
+As a logician, *Aristotle* was most notable for his theory of inference. The *"middle term"* that showed up in the network diagram refers to his theory of inferences (aka syllogism), where it is a term that appears as a subject/predicate/proposition in both premises but not in the conclusion (complicated right?). To simplify, let me give an example:
 
 * Major premise: All **men** are mortal.
 * Minor premise: Aristotle is a **man**.
@@ -171,7 +171,7 @@ p_aristotle
 
 ### Stoicism (circa 164 AD)
 
-*Stoicism* teaches us how to treat others. For example, "thou shalt not do unto others what you would not do unto thyself." (paraphrased from Matthew 7:12). In even simpler words, it means to treat others as you would like to be treated by them. As can be seen from the language used, this explains why "thou shalt", "thou art", "thou hast" and "thy mind" appeared significantly in the texts of *Stoicism*.
+*Stoicism* teaches us how to treat others. For example, "thou shalt not do unto others what you would not do unto thyself." (paraphrased from Matthew 7:12). In even simpler words, it means to treat others as you would like to be treated by them. As can be seen from the language used, this explains why *"thou shalt"*, *"thou art"*, *"thou hast"* and *"thy mind"* appeared significantly in the texts of *Stoicism*.
 
 ```{r, echo=FALSE}
 p_stoicism = biword_counts[[11]] %>%
@@ -189,7 +189,7 @@ p_stoicism
 
 ### Rationalism (circa 1681 AD)
 
-In *Rationalism*, one of the notable philosophers, René Descartes, posits that "animal spirits" are responsible for physical stimulations that cause the body to move; the notion that these "spirits" function in a way similar to the body's nervous system is a key concept to understanding Descartes' physiology. Another philosopher of *Rationalism*, Gottfried Leibniz, also believed that animals have spirits and souls. This is the reason why "animal spirits" were frequently mentioned as shown in the network diagram.
+In *Rationalism*, one of the notable philosophers, René Descartes, posits that *"animal spirits"* are responsible for physical stimulations that cause their body to move; the notion that these "spirits" function in a way that is similar to the body's nervous system is a key concept to understanding the physiology described by Descartes. Another philosopher of *Rationalism*, Gottfried Leibniz, also believed that animals have spirits and souls. This is the reason why *"animal spirits"* were frequently mentioned in the network diagram.
 
 ```{r, echo=FALSE}
 p_rationalism = biword_counts[[4]] %>%
@@ -207,7 +207,7 @@ p_rationalism
 
 ### Empiricism (circa 1716 AD)
 
-The founder of *Empiricism*, John Locke, asserts that the human mind is like a clean slate of blank canvas, which gets populated with information through life's experiences. The way we formulate our ideas through experiences has two main steps: First, we acquire "simple ideas" through our experiences, and these "simple ideas" are synthesized to create "complex ideas".
+The founder of *Empiricism*, John Locke, asserts that the human mind is like a clean slate of blank canvas, which gets populated with information through life's experiences. The way we formulate our ideas through experiences has two main steps: First, we acquire *"simple ideas"* through our experiences, and these *"simple ideas"* are synthesized to create *"complex ideas"*.
 
 ```{r, echo=FALSE}
 p_empiricism = biword_counts[[3]] %>%
@@ -225,7 +225,7 @@ p_empiricism
 
 ### German idealism (circa 1803 AD)
 
-Immanuel Kant, a philosopher of *German Idealism*, argues that the human understanding is the source of the general laws of nature that structure all our experience, and that human reason gives itself the "moral law", which is our basis for our belief in God, freedom and immortality. He also criticized "pure reason", which led to his book, Critique of Pure Reason.
+Immanuel Kant, a philosopher of *German Idealism*, argues that the human understanding is the source of the general laws of nature that structure all our experience, and that human reason gives itself the *"moral law"*, which is our basis for our belief in God, freedom and immortality. He also criticized *"pure reason"*, which led to his book, Critique of Pure Reason.
 
 ```{r, echo=FALSE}
 p_gerideal = biword_counts[[8]] %>%
@@ -243,7 +243,7 @@ p_gerideal
 
 ### Capitalism (circa 1813 AD)
 
-*Capitalism* needs no introduction and the network diagram is splotched with capitalist jargons like "marginal efficiency", "foreign trade", "raw produce", etc. The main idea of *Capitalism* is a system in which private actors own and control property in accordance to their own interests, and that demand and supply freely set prices in markets that serve the best interests of society. In short, the purpose of *Capitalism* is to make a profit.
+*Capitalism* needs no introduction and the network diagram is splotched with capitalist jargons like *"marginal efficiency"*, *"foreign trade"*, *"raw produce"*, etc. The main idea of *Capitalism* is a system in which private actors own and control property in accordance to their own interests, and that demand and supply freely set prices in markets that serve the best interests of society. In short, the purpose of *Capitalism* is to make a profit.
 
 ```{r, echo=FALSE}
 p_capital = biword_counts[[10]] %>%
@@ -261,7 +261,7 @@ p_capital
 
 ### Communism (circa 1877 AD)
 
-We should also be familiar with *Communism*. Karl Marx used the term "labour power" extensively as a key concept in his works to critique capitalist political economies. This explains why this term stands out in the network diagram.
+We should also be familiar with *Communism*. Karl Marx used the term *"labour power"* extensively as a key concept in his works to critique capitalist political economies. This explains why this term stands out in the network diagram.
 
 ```{r, echo=FALSE}
 p_commun = biword_counts[[9]] %>%
@@ -279,7 +279,7 @@ p_commun
 
 ### Nietzsche (circa 1887 AD)
 
-*Nietzsche* introduced the three metamorphoses in his book, Thus Spoke Zarathustra, which essentially describes the process of spiritual transformation that characterizes his vision of a flourishing life. He used Old Enlish terms like "thou shalt" in his works. But don't confused and assume that *Nietzsche* is a spiritual man; in fact, he attacks Christian beliefs in his book, The Antichrist, where he asserts the "Christian morality" as slavish.
+*Nietzsche* introduced the three metamorphoses in his book, Thus Spoke Zarathustra, which essentially describes the process of spiritual transformation that characterizes his vision of a thriving life. He used Old English terms like *"thou shalt"* in his works. But don't get confused and assume that *Nietzsche* was a spiritual and religious man; in fact, he is the antithesis of that. He attacks Christian beliefs in his book, The Antichrist, where he asserts the *"Christian morality"* as being slavish.
 
 ```{r, echo=FALSE}
 p_nietzsche = biword_counts[[12]] %>%
@@ -297,7 +297,7 @@ p_nietzsche
 
 ### Feminism (circa 1933 AD)
 
-The *Feminism* philosophy argues that women are not naturally inferior to men and that they be treated equally with access to similar activities and projects as men. Therefore, we see topics like "woman suffrage", "women's rights" and "birth control" being raised in the network diagram. We also see a high frequency of "black women" and "white women" being used in the texts and that could be due to the fact that they are the subjects of unfair treatment.
+The *Feminism* philosophy argues that women are not naturally inferior to men and that they be treated equally with access to similar activities as men. Therefore, we see topics like *"woman suffrage"*, *"women's rights"* and *"birth control"* being raised in the network diagram. We also see a high frequency of *"black women"* and *"white women"* being used in the texts and that could likely be due to the fact that they were the subject of the entire discrimination described in *Feminism*.
 
 ```{r, echo=FALSE}
 p_feminism = biword_counts[[13]] %>%
@@ -315,7 +315,7 @@ p_feminism
 
 ### Phenomenology (circa 1938 AD)
 
-Martin Heidegger, a German philosopher, uses the German term, "da sein", which means "being there", "presence" or "human reality/existence". He uses "da sein" to refer to the experience of being that is unique to human beings and must therefore confront issues such as personhood, mortality and the paradox of living in a relationship with others while being alone with oneself.
+Martin Heidegger, a German philosopher, uses the German term, *"da sein"*, which means "being there", "presence" or "human reality/existence". He uses *"da sein"* to refer to the experience of "being" that is unique to human beings and must therefore confront issues such as personhood, mortality and the paradox of living in a relationship with others while being alone with oneself.
 
 ```{r, echo=FALSE}
 p_pheno = biword_counts[[7]] %>%
@@ -333,7 +333,7 @@ p_pheno
 
 ### Analytic (circa 1959 AD)
 
-In the *Analytic* philosophy, the term "sense data" means "what is given to sense" and constitute what we, as perceiving subjects, are directly aware of in perceptual experience, prior to cognitive acts. For example, in our vision, sense data are described with colors and shapes. Suppose we have a red desk with a green book on it; our sense data would be a patch of red along with a green rectangular patch on it. Based on these data, we can affirm that a red and a green thing (or a desk and a book) are present before us. Also, the term "proper names" are used commonly in *Analytic* philosophy, but I shall not delve too deep on this.
+In *Analytic* philosophy, the term *"sense data"* means "what is given to sense" and constitute what we, as perceiving subjects, are directly aware of in perceptual experience, prior to cognitive acts. For example, in our vision, *"sense data"* is described with colors and shapes. Suppose we have a red desk with a green book on it; our *"sense data"* would be a patch of red along with a green rectangular patch on it. Based on these data, we can affirm that a red and a green thing (or a desk and a book) are present before us. Also, the term *"proper names"* are used commonly in *Analytic* philosophy, but I shall not delve too deep on this.
 
 ```{r, echo=FALSE}
 p_analytic = biword_counts[[5]] %>%
@@ -351,7 +351,7 @@ p_analytic
 
 ### Continental (circa 1966 AD)
 
-*Continental* philosophy is a set of "eighteenth" and "nineteenth century" philosophical traditions from mainland Europe. *Continental* philosophers generally reject the idea that natural "human sciences" are the most accurate way of understanding natural phenomena -- in short, scientific methods are inadequate to fully understand and comprehend what we experience in the world.
+*Continental* philosophy is a set of *"eighteenth century"* and *"nineteenth century"* philosophical traditions from mainland Europe. *Continental* philosophers generally reject the idea that natural *"human sciences"* are the most accurate way of understanding natural phenomena -- in short, scientific methods are inadequate to fully understand and comprehend what we experience in the world.
 
 ```{r, echo=FALSE}
 p_contin = biword_counts[[6]] %>%
@@ -369,7 +369,7 @@ p_contin
 
 ## Which schools of philosophy are more similar to each other?
 
-Now that we have a better glimpse and understanding of the different schools of philosophies (in a fast, albeit simplified manner), let's investigate deeper on how similar the various schools of thoughts are to each other. For this, I will use topic modeling techniques to classify the documents/texts into various topics/themes. Because every document is a mixture of topics, it is possible to determine how many percent of a certain topic resides in a particular document, e.g., Document 1 is 80% topic A and 20% topic B. Latent Dirichlet Allocation (LDA) is suitable for this application and will be used for the modeling.
+Now that we have a better glimpse and understanding of the different schools of philosophies (in a fast, albeit simplified manner), let's investigate deeper on how similar the various schools of thought are to each other. For this, I will use topic modeling techniques to classify the documents/texts into various topics/themes. Because every document is a mixture of topics, it becomes possible to determine how many percent of a certain topic resides in a particular document, e.g., Document 1 is 80% topic A and 20% topic B. Latent Dirichlet Allocation (LDA) is suitable for this application and will be used for the modeling process.
 
 ### Data prep
 
@@ -408,7 +408,7 @@ for (school in schools){
 }
 ```
 
-LDA performs better on larger texts and not so well on shorter texts for the simple fact that shorter texts (e.g., tweets) would likely only have one topic. Since we are trying to fit multiple topics in a document (in this case, texts associated to a particular philosophical school), we would need to combine all the sentences into a mega text according to each school. After some data manipulation, the resulting dataframe looks like the dataframe below -- it has 13 rows (for the 13 schools and 13 mega sized texts) and 2 columns.
+LDA performs better on larger texts and not so well on shorter texts for the simple fact that shorter texts (e.g., tweets) would likely only have one topic. Since we are trying to fit multiple topics in a document (in this case, texts associated to a particular philosophical school), we would need to combine all the sentences into a mega text according to each school. After some data manipulation, the resulting dataframe looks like the dataframe below -- it has 13 rows (for the 13 schools and 13 mega sized texts) and 2 columns. Each row of school would have an amalgamated chunk of text (mega text) that belong to it.   
 
 ```{r, echo=FALSE}
 # Join the combined sentences with the dataframes
@@ -436,7 +436,7 @@ books_all = do.call(rbind, books)
 glimpse(books_all)
 ```
 
-Now I will tokenize the sentences into individual words using `unnest_tokens()` and remove `stop_words`. We will treat every school of philosophy as a separate document. The resulting dataframe `word_counts` is now in a tidy form and sorted by the highest occurring words as shown below (only showing top 10 occurring words). 
+Now I will tokenize the sentences into individual words using `unnest_tokens()` and remove `stop_words`. We will treat every school of philosophy as a separate document. The resulting dataframe `word_counts` below is now in a tidy form and sorted by the highest occurring words as shown below (I will only show top 10 occurring words here). 
 
 ```{r, echo=FALSE, message=FALSE}
 word_counts = books_all %>%
@@ -449,7 +449,7 @@ head(word_counts, 10)
 
 ### LDA on schools
 
-I will now transform the tidy dataframe into a `DocumentTermMatrix` using `cast_dtm()` because `LDA()` requires the data to be in a `DocumentTermMatrix` format. I can then use the `LDA()` function to create a 13-topic model. I used 13 topics specifically because I know there are 13 schools.
+I will now transform the tidy dataframe into a `DocumentTermMatrix` using `cast_dtm()` because `LDA()` requires the data to be in a `DocumentTermMatrix` format. I can then use the `LDA()` function to create a 13-topics model. I used 13 topics specifically because I know there are 13 schools and I'm assuming that they would be distinct from each other (though I know there would be similarities between schools).
 
 ```{r, echo=FALSE}
 schools_dtm = word_counts %>%
@@ -472,7 +472,7 @@ school_topics = tidy(schools_lda, matrix = "beta")
 school_topics
 ```
 
-We will then use the `dplyr::slice_max()` function to find the top 5 terms that are most common for each topic. The interactive table below allows us to skim through the top 5 words for each topic. Alternatively, I visualized it in a `ggplot2` plot as shown below.
+We will then use the `dplyr::slice_max()` function to find the top 5 terms that are most common for each topic. The interactive table below allows us to skim through the top 5 words for each topic. Alternatively, I visualized it in a `ggplot2` plot also shown below.
 
 ```{r, echo=FALSE}
 top_terms = school_topics %>%
@@ -527,9 +527,9 @@ p_schgamma
 
 On the other hand, *Capitalism* and *Phenomenology* do not seem to be that similar in topics when compared with the rest; they seem to have very distinct topics on their own. I tried to make sense of why they do not share similar topics with the rest. For *Capitalism*, the main motive of this philosophy is to make a profit, which explains the myriad economic terms (e.g., "foreign trade", "raw produce", "marginal efficiency", etc.) that popped up in the network diagram in the previous section. In this regard, *Capitalism* differs significantly with the other schools of philosophy because the rest had words that were more related to human existential meaning. For example, in the network diagrams, "practical wisdom" appeared in *Plato*, "thy mind" in *Stoicism*, "human body" in *Rationalism*, "pure reason" and "moral law" in *German Idealism*, so on and so forth -- words relating more to human existence. Lastly, *Phenomenology* might be distinct from the rest because of the use of German terms (e.g., "da sein").
 
-Also, we notice that every school had slight to moderate similarities of coming from topic 13. On closer examination of the plot with the top 5 word terms above, topic 13's top words were "time", "nature", "life", "reason", etc., which may indicate why every school had a "hint" of topic 13 -- simply because philosophy is essentially the study of ideas about knowledge, truth, the nature and the meaning of life (recall my first stanza in this article), and all schools would have had some tinge of that aspect! Something cool to note also is that *Capitalism* had the lowest probability of coming from topic 13, which corroborates our analysis above (being distinct from the rest) because it does not really talk about human existential issues.
+Also, we notice that every school had slight to moderate similarities of coming from topic 13. On closer examination of the plot with the top 5 word terms above, topic 13's top words were "time", "nature", "life", "reason", etc., which may indicate why every school had a "hint" of topic 13 -- simply because philosophy is essentially the study of ideas about knowledge, truth, the nature and the meaning of life (recall my first stanza in this article), and all schools would have had some tinge of that aspect! Something cool to note also is that *Capitalism* had the lowest probability of coming from topic 13, which corroborates our analysis above (being distinct from the rest) -- it does not really talk much about human existential issues as much as the growth of the economy.
 
-(PS: For those who may not be able to distinguish between color palettes clearly, an alternative to visualize the school-topic probabilities is shown below. It essentially talks about the same stuff as the plot above, but without colors.) 
+(PS: For those who may not be able to distinguish color palettes clearly, an alternative to visualize the school-topic probabilities is shown below. It essentially talks about the same stuff as the plot above, but without colors.) 
 
 ```{r, echo=FALSE}
 p_schgamma2 = schools_gamma %>%
@@ -545,7 +545,7 @@ p_schgamma2
 
 ## Conclusion
 
-All in all, I hope we had a better grasp (or at least a glimpse) of what each school of philosophy is about with the help of the network diagrams. It is clear that modern data science techniques are able to help us decipher (or break down) large chunks of text and give us hints about what they are about without needing us to ever read the entire works of the philosophers like reading a book.
+All in all, I hope we had a better grasp (or at least a glimpse) of what each school of philosophy is about with the help of the network diagrams. It is clear that modern data science techniques are able to help us decipher (or break down) large chunks of text and give us hints about what they are about without needing us to ever read the entire works of the philosophers.
 
 Furthermore, the LDA was able to assign various topics to each document/school and it helped us identify similar topics between the different schools of philosophy. *Stoicism* and *Nietzsche* are more similar in topics due to the similarity in language used. On the other hand, *Capitalism* and *Phenomenology* seem to be distinct and different from the rest because one uses very distinct economics terms while the other has words in German.
 
